SLING-12805 - Fix unit tests that started failing on Windows
* fixed in normalizeLineEndings by applying extra escaping; it looks like Windows
git checkouts replace \n with \r\n by default now